--- a/HTML, CSS & JavaScript/Native Code Examples/W3Schools HowTo Examples/css/index.css
+++ b/HTML, CSS & JavaScript/Native Code Examples/W3Schools HowTo Examples/css/index.css
@@ -11,4 +11,14 @@ body {
 	min-width: 100%;
 	min-height: 100%;
 	border: 1px solid #1a1a1a;  
+	padding: 40px;
+}
+
+#example-code-frame {
+	width: 100%;
+	height: 100%;
+	min-width: 100%;
+	min-height: 100%;
+	border: 1px solid #1a1a1a;  
+	padding: 0px;
 }
